executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/dashes/egress-dashes-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: egressgateway-dashes-@fpi-name@-unver
  labels:
    app: egressgateway-@fpi-name@-unver
  namespace: ${global.multiClusters.openshiftProjectName}
spec:
  ports:
    - name: http-2003
      protocol: TCP
      port: 2003
      targetPort: 2003
  selector:
    app: istio-egressgateway-@fpi-name@-unver
