executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/dashes/egress-dashes-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-dashes-@fpi-name@-unver
spec:
  selector:
    istio: egressgateway-@fpi-name@-unver
  servers:
    - hosts:
        - '${@fpi-name@.ctr.istio.egress.se.http.dashes.host}'
      port:
        name: http-2003
        number: 2003
        protocol: HTTP
