executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/dashes/egress-dashes-se.yaml
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: egressgateway-dashes-@fpi-name@-unver
spec:
  exportTo:
    - .
  hosts:
    - '${@fpi-name@.ctr.istio.egress.se.http.dashes.host}'
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - name: https-dashes
      number: ${@fpi-name@.ctr.istio.egress.se.http.dashes.port}
      protocol: https
    - name: http-80
      number: 80
      protocol: http
